--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -9,13 +9,13 @@ Version 2.0.0 BETA2
 -Added: In the Media Library you can play a track pressing CROSS (like in the file browser)
 -Added: You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
 -Added: italian, french, polish, portuguese, russian language
-        Many thanks to fabiom, Mizou93, G-King, coach777, Magic_PSP
+        Many thanks to fabiom, Mizou93, G-King, coach777, Magic PSP
 -Added: help (press L + R)
 -Added: you can add selected playlist to the current one (press START in the playlist browser)
 -Added: Directories are marked with a leading "/" in the file browser
 -Added: You can check a playlist with triangle (removes dead-links)
 -Added: option for keys autorepeat interval
--Added: Top 100 in media library
+-Added: "Top 100" in media library
 -Added: Option to enable/disable splash screen
 -Added: "Borwse All" in media library
 -Added: Cover displayed in file browser and in Media Library (stay 0.5 seconds on an item).
