--- a/src_v2/languages/English/lang.txt
+++ b/src_v2/languages/English/lang.txt
@@ -193,3 +193,7 @@ SETTINGS_17=Show splash screen
 
 BROWSE_TOP100=Top 100
 BROWSE_ALL=Browse all
+
+################################################################################
+#2.0.0 BETA3
+################################################################################
