--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -1,6 +1,13 @@
 LightMP3 Changelog
 ------------------
 
+Version 2.0.0 RC1
+-----------------
+-Added: support for filename with foreign characters (אטלעש...)
+        Many thanks to cooleyes for the FAT driver
+
+
+
 Version 2.0.0 BETA2
 -------------------
 -Added: Switched to OSLib MOD, now supports intraFont
