--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -3,14 +3,17 @@ LightMP3 Changelog
 
 Version 2.0.0 RC1
 -----------------
+-Added: You can sort records in the Media Library (press TRIANGLE)
 -Added: support for filename with foreign characters (אטלעש...)
         Many thanks to cooleyes for the FAT driver
 -Added: cpu clock set to minimum value when music is paused
 -Added: French, German, Polish, Spanish language
 -Added: Smoother progress bar
--Added: Icons for folder/music in file browser
+-Added: Icons for folder/music in file browser and media library
 -Added: New icon and PIC1.PNG (many thanks to dario1crisafulli)
 -Fixed: Strings are limited inside the menu area.
+-Fixed: Sleep bug for MP3 and ATRAC3+ files (doesen't work with OGG)
+-Fixed: Some crash in the Media Library.
 
 
 Version 2.0.0 BETA2
