--- a/src_v2/languages/English/lang.txt
+++ b/src_v2/languages/English/lang.txt
@@ -3,7 +3,8 @@
 #Contacts   : sakya_tg@yahoo.it
 
 #Encoding is one of: UTF-8, GBK, BIG5, SHIFT-JIS, EUC-KR, MS-EE, MS-CYRL, ISO-8859-1, ISO-8859-2
-ENCODING=UTF8
+ENCODING=UTF-8
+TAG_ENCODING=UTF-8
 
 #Language to use in the On Screen Keyboard.
 #			JAPANESE			0
