--- a/src_v2/languages/Italiano/lang.txt
+++ b/src_v2/languages/Italiano/lang.txt
@@ -1,7 +1,7 @@
 #Language   : Italiano
 #By         : Magic PSP
 #Contacts   : aliquo93@hotmail.it
-ENCODING=ANSI
+ENCODING=UTF-8
 
 #Language to use in the On Screen Keyboard.
 #			JAPANESE			0
@@ -18,11 +18,11 @@ ENCODING=ANSI
 #			CHINESE_SIMPLIFIED	11
 OSK_LANGUAGE=5
 
-YES=Si
+YES=S√¨
 NO=No
 WAIT=Attendere...
-CHECK_BRIGHTNESS_TITLE=Controllo luminosit‡
-CHECK_BRIGHTNESS=Abbassare la luminosit‡?
+CHECK_BRIGHTNESS_TITLE=Controllo luminosit√†
+CHECK_BRIGHTNESS=Abbassare la luminosit√†?
 BRIGHTNESS_NO=No
 BRIGHTNESS_YES_WARNING=Si, con avviso
 BRIGHTNESS_YES=Si, senza avviso
@@ -42,7 +42,7 @@ RATING=Voto
 PLAYED=Avviata v.
 NOT_SUPPORTED=Non supportato
 
-MODE=Modalit‡
+MODE=Modalit√†
 BITRATE=Bitrate
 SAMPLERATE=Frequenza
 LAYER=Layer
@@ -94,7 +94,7 @@ SETTINGS_02=Lingua
 SETTINGS_03=Scrivere audio Scrobbler Log
 SETTINGS_04=Diminuzione graduale quando si salta una traccia
 SETTINGS_05=Abbassamento volume
-SETTINGS_06=Controllo luminosit‡
+SETTINGS_06=Controllo luminosit√†
 SETTINGS_07=Esegui MP3 utilizzando il Media Engine
 SETTINGS_08=Tipo di boost per MP3 utilizzando libMAD
 SETTINGS_09=Frequenza CPU automatica
@@ -153,7 +153,7 @@ HELP_FILE_BROWSER_01=X per entrare nella cartella/riprodurre brano
 HELP_FILE_BROWSER_02=O per andare nella cartella precedente
 HELP_FILE_BROWSER_03=[] per riprodurre l'intera cartella
 HELP_FILE_BROWSER_04=START per aggiungere cartella/brano nella playlist
-HELP_FILE_BROWSER_05=SELECT per attivare la modalit‡ USB
+HELP_FILE_BROWSER_05=SELECT per attivare la modalit√† USB
 
 HELP_PLAYLIST_BROWSER_TITLE=Aiuto playlist
 HELP_PLAYLIST_BROWSER_01=X per riprodurre la playlist
