--- a/src_v2/languages/Italiano/lang.txt
+++ b/src_v2/languages/Italiano/lang.txt
@@ -192,3 +192,21 @@ SETTINGS_17=Mostra splash screen
 
 BROWSE_TOP100=Top 100
 BROWSE_ALL=Visualizza tutti
+
+BROWSE_TOP100=Top 100
+BROWSE_ALL=Browse all
+
+################################################################################
+#2.0.0 RC1
+################################################################################
+HELP_MEDIALIBRARY_06=Triangle to sort tracks
+
+ORDER_BY_01=Artist, Album, Track#
+ORDER_BY_02=Artist, Album, Title
+ORDER_BY_03=Artist, Title
+ORDER_BY_04=Title
+ORDER_BY_05=Year, Title
+ORDER_BY_06=Year, Artist, Album, Track#
+ORDER_BY_07=Year, Artist, Album, Title
+ORDER_BY_08=Rating, Artist, Album, Track#
+ORDER_BY_09=Rating, Artist, Album, Title
