--- a/src_v2/languages/Portuguese/lang.txt
+++ b/src_v2/languages/Portuguese/lang.txt
@@ -176,3 +176,31 @@ HELP_MEDIALIBRARY_02=CIRCULO para ir um nivel acima
 HELP_MEDIALIBRARY_03=QUADRADO para reproduzir a selecao
 HELP_MEDIALIBRARY_04=START para adicionar selecao/faixa na lista
 HELP_MEDIALIBRARY_05=X + CIMA/BAIXO para classificar a faixa
+HELP_SETTINGS_TITLE=Settings help
+HELP_SETTINGS_01=Left/Right to cange setting
+HELP_SETTINGS_02=Start to save settings
+
+LOADING_SKIN_TITLE=Please Wait
+LOADING_SKIN=Loading new skin
+CHECKING_PLAYLIST=Checking playlist's files
+
+SETTINGS_16=Keys repeat interval
+SETTINGS_17=Show splash screen
+
+BROWSE_TOP100=Top 100
+BROWSE_ALL=Browse all
+
+################################################################################
+#2.0.0 RC1
+################################################################################
+HELP_MEDIALIBRARY_06=Triangle to sort tracks
+
+ORDER_BY_01=Artist, Album, Track#
+ORDER_BY_02=Artist, Album, Title
+ORDER_BY_03=Artist, Title
+ORDER_BY_04=Title
+ORDER_BY_05=Year, Title
+ORDER_BY_06=Year, Artist, Album, Track#
+ORDER_BY_07=Year, Artist, Album, Title
+ORDER_BY_08=Rating, Artist, Album, Track#
+ORDER_BY_09=Rating, Artist, Album, Title
