--- a/src_v2/languages/Russian/lang.txt
+++ b/src_v2/languages/Russian/lang.txt
@@ -193,3 +193,17 @@ SETTINGS_17=œŒ ¿«€¬¿“‹ «¿—“¿¬ ”
 
 BROWSE_TOP100=“Œœ 100
 BROWSE_ALL=¬€¡–¿“‹ ¬—≈
+################################################################################
+#2.0.0 RC1
+################################################################################
+HELP_MEDIALIBRARY_06=Triangle to sort tracks
+
+ORDER_BY_01=Artist, Album, Track#
+ORDER_BY_02=Artist, Album, Title
+ORDER_BY_03=Artist, Title
+ORDER_BY_04=Title
+ORDER_BY_05=Year, Title
+ORDER_BY_06=Year, Artist, Album, Track#
+ORDER_BY_07=Year, Artist, Album, Title
+ORDER_BY_08=Rating, Artist, Album, Track#
+ORDER_BY_09=Rating, Artist, Album, Title
