Fixed Korean Language support

--- a/src_v2/languages/French/lang.txt
+++ b/src_v2/languages/French/lang.txt
@@ -1,3 +1,26 @@
+#Language   : French
+#By         : 
+#Contacts   : 
+
+#Encoding is one of: UTF-8, GBK, BIG5, SHIFT-JIS, EUC-KR, MS-EE, MS-CYRL, ISO-8859-1, ISO-8859-2
+ENCODING=UTF-8
+TAG_ENCODING=UTF-8
+
+#Language to use in the On Screen Keyboard.
+#			JAPANESE			0
+#			ENGLISH				1
+#			FRENCH				2
+#			SPANISH				3
+#			GERMAN				4
+#			ITALIAN				5
+#			DUTCH				6
+#			PORTUGUESE			7
+#			RUSSIAN				8
+#			KOREAN				9
+#			CHINESE_TRADITIONAL	10
+#			CHINESE_SIMPLIFIED	11
+OSK_LANGUAGE=2
+
 YES=Oui
 NO=Non
 WAIT=Veuillez patienter...
