--- a/src_v2/languages/Korean/lang.txt
+++ b/src_v2/languages/Korean/lang.txt
@@ -1,4 +1,4 @@
-#Language   : Korean
+﻿#Language   : Korean
 #By         : Kevin
 #Contacts   : sosaria@empal.com
 #UTF-8 Encoding : NexTOS, nextos@korea.com
@@ -210,183 +210,3 @@ ORDER_BY_06=발매년도, 아티스트, 앨범, 트랙번호
 ORDER_BY_07=발매년도, 아티스트, 앨범, 타이틀
 ORDER_BY_08=선호도, 아티스트, 앨범, 트랙번호
 ORDER_BY_09=선호도, 아티스트, 앨범, 타이틀
-#Language   : Korean
-#By         : Kevin
-#Contacts   : sosaria@empal.com
-#UTF-8 Encoding : NexTOS, nextos@korea.com
-ENCODING=UTF8
-
-YES=네
-NO=아니오
-WAIT=잠시 기다려 주십시오...
-CHECK_BRIGHTNESS_TITLE=밝기 경고
-CHECK_BRIGHTNESS=디스플레이 밝기를 낮추겠습니까?
-BRIGHTNESS_NO=아니오
-BRIGHTNESS_YES_WARNING=사용자 확인
-BRIGHTNESS_YES=네
-FREE_MEMORY=Free mem:
-
-USB_ACTIVE=USB 연결됨
-USB_MESSAGE=USB를 해제하려면 SELECT를 누르세요.
-TITLE=타이틀
-ARTIST=아티스트
-ALBUM=앨범
-GENRE=장르
-YEAR=연도
-TIME=시간
-TRACK=트랙
-ADDING_PLAYLIST=재생목록에 곡 추가
-RATING=선호도
-PLAYED=재생
-NOT_SUPPORTED=지원하지 않음
-
-MODE=Mode
-BITRATE=Bitrate
-SAMPLERATE=Samplerate
-LAYER=Layer
-FILE_FORMAT=Format
-EMPHASIS=Emphasis
-SLEEP_MODE=잠자기모드
-PLAY_MODE=재생모드
-STATUS=상태
-VOLUME_BOOST=볼륨 향상
-EQUALIZER=이퀄라이저
-NOCOVER=커버아트 없음
-BUTTON_1=파일 탐색
-BUTTON_2=재생목록
-BUTTON_3=목록 편집
-BUTTON_4=라이브러리
-BUTTON_5=설정
-
-SLEEP_MODE_0=사용하지않음
-SLEEP_MODE_1=곡 종료시
-SLEEP_MODE_2=재생목록 종료시
-
-PLAY_MODE_0=순차
-PLAY_MODE_1=모두 반복
-PLAY_MODE_2=한곡 반복
-PLAY_MODE_3=셔플
-PLAY_MODE_4=셔플 반복
-
-PLAYER_STATUS_0=파일 여는중
-PLAYER_STATUS_1=일시정지
-PLAYER_STATUS_2=재생중
-
-CONFIRM_MESSAGE=확인 X버튼, 취소 O버튼
-CONFIRM_LOAD_TITLE=확인
-CONFIRM_LOAD=선택된 재생목록을 읽겠습니까?
-
-CONFIRM_REMOVE_TITLE=확인
-CONFIRM_REMOVE=재생목록을 삭제하시겠습니까?
-ASK_PLAYLIST_NAME=재생목록 이름을 입력하세요.
-
-CONFIRM_CLEAR_PLAYLIST_TITLE=확인
-CONFIRM_CLEAR_PLAYLIST=모든 곡을 제거하시겠습니까?
-CONFIRM_REMOVE_FROM_PLAYLIST_TITLE=확인
-CONFIRM_REMOVE_FROM_PLAYLIST=선택된 곡을 제거하시겠습니까?
-PLAYLIST_NAME=이름
-TOTAL_TRACKS=곡 수
-
-SETTINGS_01=스킨
-SETTINGS_02=언어
-SETTINGS_03=Audio Scrobbler Log 기록
-SETTINGS_04=곡 탐색시 페이드아웃
-SETTINGS_05=음소거
-SETTINGS_06=디스플레이 밝기 검사
-SETTINGS_07=Media Engine을 사용하여 MP3 재생
-SETTINGS_08=libMAD 사용시 성능향상 모드
-SETTINGS_09=CPU Clock 자동 조절
-SETTINGS_10=CPU Clock: GUI
-SETTINGS_11=CPU Clock: MP3 libMAD
-SETTINGS_12=CPU Clock: MP3 Media Engine
-SETTINGS_13=CPU Clock: OGG Vorbis
-SETTINGS_14=CPU Clock: Flac
-SETTINGS_15=CPU Clock: ATRAC3
-CONFIRM_SAVE_SETTINGS_TITLE=확인
-CONFIRM_SAVE_SETTINGS=설정을 적용하시겠습니까?
-
-HELP_PLAYER_TITLE=Player help
-HELP_PLAYER_01=R : 다음곡 재생
-HELP_PLAYER_02=L : 이전곡 재생
-HELP_PLAYER_03=CROSS : 재생/일시정지
-HELP_PLAYER_04=CIRCLE : 정지
-HELP_PLAYER_05=SQUARE : 음소거 On/Off
-HELP_PLAYER_06=TRIANGLE : 잠자기모드 변경
-HELP_PLAYER_07=SELECT : 재생모드 변경
-HELP_PLAYER_08=START : 절전모드 켜기/끄기
-HELP_PLAYER_09=CROSS + UP/DOWN : 곡 선호도 변경
-
-BROWSE_ARTIST=음악가별 보기
-BROWSE_ALBUM=앨범별 보기
-BROWSE_GENRE=장르별 보기
-BROWSE_RATING=선호도별 보기
-SEARCH=검색
-SCAN_MS=미디어 검색
-
-CONFIRM_SCAN_MS_TITLE=확인
-CONFIRM_SCAN_MS=미디어를 검색하시겠습니까?
-CHECKING_FILE=메모리스틱의 파일들 검사
-SCANNING=검색중
-MESSAGEBOX_CONTINUE=계속하려면 X버튼을 누르세요
-SCAN_FINISHED=메모리스틱 검색 완료
-MEDIA_FOUND=XX 개의 미디어가 검색되었습니다
-ASK_SEARCH_STRING=검색어를 입력하세요
-QUERY_RUNNING_TITLE=잠시 기다려주세요
-QUERY_RUNNING=요청을 수행중
-TOTAL_TIME=총 시간
-WORKING=동작중
-
-#This is used for the message "xx% done"
-DONE=완료
-
-################################################################################
-#2.0.0 BETA2
-################################################################################
-ALL=모두
-BOOST_NEW=New
-BOOST_OLD=Old
-
-HELP_FILE_BROWSER_TITLE=파일 탐색기 도움말
-HELP_FILE_BROWSER_01=Cross : 디렉토리 들어가기/곡재생
-HELP_FILE_BROWSER_02=Circle : 상위 디렉토리 이동
-HELP_FILE_BROWSER_03=Square : 디렉토리 전체 재생
-HELP_FILE_BROWSER_04=Start : 디렉토리/파일 재생목록에 추가
-HELP_FILE_BROWSER_05=Select : USB 모드 켜기/끄기
-
-HELP_PLAYLIST_BROWSER_TITLE=재생목록 탐색기 도움말
-HELP_PLAYLIST_BROWSER_01=Cross : 재생목록 재생
-HELP_PLAYLIST_BROWSER_02=Circle : 재생목록 삭제
-HELP_PLAYLIST_BROWSER_03=Square : 재생목록을 편집기에 읽기
-HELP_PLAYLIST_BROWSER_04=Start : 재생목록을 편집기에 추가
-
-CONFIRM_ADD_PLAYLIST_TITLE=확인
-CONFIRM_ADD_PLAYLIST=선택한 재생목록을 추가하겠습니까?
-
-HELP_PLAYLIST_EDITOR_TITLE=재생목록 편집기 도움말
-HELP_PLAYLIST_EDITOR_01=Square : 선택한 곡을 위로 이동
-HELP_PLAYLIST_EDITOR_02=Cross : 선택한 곡을 아래로 이동
-HELP_PLAYLIST_EDITOR_03=Circle : 재생목록에서 곡 제거
-HELP_PLAYLIST_EDITOR_04=Triangle : 파일 검사
-HELP_PLAYLIST_EDITOR_05=Start : 재생목록 저장
-HELP_PLAYLIST_EDITOR_06=Select : 모든 곡 제거
-HELP_PLAYLIST_EDITOR_07=Note : 재생목록 재생
-
-HELP_MEDIALIBRARY_TITLE=미디어 라이브러리 도움말
-HELP_MEDIALIBRARY_01=Cross : 하위로 이동/곡 재생
-HELP_MEDIALIBRARY_02=Circle : 상위로 이동
-HELP_MEDIALIBRARY_03=Square : 선택한 항목 재생
-HELP_MEDIALIBRARY_04=Start : 선택한 항목을 재생목록에 추가
-HELP_MEDIALIBRARY_05=Cross + Up/Down : 곡 선호도 변경
-
-HELP_SETTINGS_TITLE=설정 도움말
-HELP_SETTINGS_01=Left/Right : 설정 변경
-HELP_SETTINGS_02=Start : 설정 저장
-
-#0=Japanese, 1=English, 2=French, 3=Spanish, 4=German, 5=Italian, 6=Dutch, 7=Portuguese, 8=Russian, 9=Korean, 10-11=Chinese
-OSK_LANGUAGE=9
-
-LOADING_SKIN_TITLE=잠시만 기다려 주세요
-LOADING_SKIN=새 스킨을 적용중입니다
-CHECKING_PLAYLIST=재생목록의 파일을 검사중입니다
-
-SETTINGS_16=키 반복 지연
