--- a/src_v2/languages/Portuguese/lang.txt
+++ b/src_v2/languages/Portuguese/lang.txt
@@ -1,6 +1,9 @@
 #Language   : Portuguese (brazilian)
 #By         : fabiom
 #Contacts   : fabiom2@gmail.com
+#Encoding is one of: UTF-8, GBK, BIG5, SHIFT-JIS, EUC-KR, MS-EE, MS-CYRL, ISO-8859-1, ISO-8859-2
+ENCODING=UTF-8
+TAG_ENCODING=UTF-8
 
 #Language to use in the On Screen Keyboard.
 #			JAPANESE			0
