--- a/src_v2/languages/English/lang.txt
+++ b/src_v2/languages/English/lang.txt
@@ -5,7 +5,6 @@
 #Encoding is one of: UTF-8, GBK, BIG5, SHIFT-JIS, EUC-KR, MS-EE, MS-CYRL, ISO-8859-1, ISO-8859-2
 ENCODING=UTF-8
 TAG_ENCODING=UTF-8
-
 #Language to use in the On Screen Keyboard.
 #			JAPANESE			0
 #			ENGLISH				1
@@ -211,11 +210,11 @@ ORDER_BY_06=Year, Artist, Album, Track#
 ORDER_BY_07=Year, Artist, Album, Title
 ORDER_BY_08=Rating, Artist, Album, Track#
 ORDER_BY_09=Rating, Artist, Album, Title
+
 ################################################################################
 #2.0.0 RC2
 ################################################################################
 HELP_PLAYER_10=L + Circle to create a bookmark and exit
 CONFIRM_BOOKMARK_TITLE=Confirm
 CONFIRM_BOOKMARK=Create a bookmark and exit?
-
-
+CONFIRM_BOOKMARK_LOAD=Load the saved bookmark?
