--- a/src_v2/languages/Espanol/lang.txt
+++ b/src_v2/languages/Espanol/lang.txt
@@ -207,3 +207,11 @@ ORDER_BY_06=Year, Artist, Album, Track#
 ORDER_BY_07=Year, Artist, Album, Title
 ORDER_BY_08=Rating, Artist, Album, Track#
 ORDER_BY_09=Rating, Artist, Album, Title
+
+################################################################################
+#2.0.0 RC2
+################################################################################
+HELP_PLAYER_10=L + Circle to create a bookmark and exit
+CONFIRM_BOOKMARK_TITLE=Confirm
+CONFIRM_BOOKMARK=Create a bookmark and exit?
+CONFIRM_BOOKMARK_LOAD=Load the saved bookmark?
