Applied patch Hold.Display.Off.Setting.For.R131.patch by kurian2z5

--- a/src_v2/languages/French/lang.txt
+++ b/src_v2/languages/French/lang.txt
@@ -225,3 +225,5 @@ SLEEP_MODE_3=0:30 Hour
 SLEEP_MODE_4=1:00 Hour
 SLEEP_MODE_5=1:30 Hours
 SLEEP_MODE_6=2:00 Hours
+
+SETTINGS_18=Display Off on Hold
